# sphere_stereo_SLAM

./: .gitignore  README_basalt.md  README_camera.md  README_kalibr.md  README_sphere-stereo
basalt/: Dockerfile
scripts/: run_verification.sh  run_verify_isb.sh  verify_full_pipeline.py  verify_isb_filter.py  verify_stitcher.py
sphere-stereo/: .gitignore  CMakeLists.txt
sphere-stereo/python/: camera_capture.py  depth_estimation.py  isb_filter.cu  isb_filter.py  main.py  realtime_capture.py  stitcher.py  utils.py
sphere-stereo/resources/: calibration.json
sphere-stereo/src/: sphere_stereo_node.cpp
src/FAST_LIO_ROS2/FAST_LIO/: CMakeLists.txt  package.xml
src/FAST_LIO_ROS2/FAST_LIO/config/: panorama_config.yaml
src/FAST_LIO_ROS2/FAST_LIO/launch/: mapping_panorama.launch.py
src/FAST_LIO_ROS2/FAST_LIO/src/: laserMapping.cpp  preprocess.cpp  preprocess.h
src/FAST_LIO_ROS2/docker/: container_run.sh
src/FAST_LIO_ROS2/livox_ros_driver2/: CMakeLists.txt
src/my_stereo_pkg/: CMakeLists.txt  README_REALTIME.md  README_realsense_odom.md  README_standalone.md  RVIZ_GUIDE.md  TROUBLESHOOTING.md  VERIFICATION.md  diff_output.txt  package.xml  run_standalone_estimator.sh
src/my_stereo_pkg/config/: icp_odometry_config.yaml  imu_odometry.yaml  visual_inertial_odometry.yaml
src/my_stereo_pkg/docs/: PYTHON_BINDINGS.md
src/my_stereo_pkg/examples/: python_stitcher_example.py
src/my_stereo_pkg/include/my_stereo_pkg/: calibration.hpp  cuda_kernels.hpp  depth_estimation.hpp  isb_filter.hpp  omnidirectional_slam_node.hpp  point_cloud_generator.hpp  stitcher.hpp
src/my_stereo_pkg/launch/: imu_odometry.launch.py  omnidirectional_slam.launch.py  omnidirectional_slam_with_rviz.launch.py  realsense_odom.launch.py
src/my_stereo_pkg/my_stereo_pkg/: __init__.py
src/my_stereo_pkg/resources/: config.json
src/my_stereo_pkg/rviz/: clean_odometry.rviz  icp_odometry.rviz  imu_odometry.rviz  lightweight_slam.rviz  omnidirectional_slam.rviz  optimized_slam.rviz  realsense_odom.rviz  simple_imu_odometry.rviz
src/my_stereo_pkg/scripts/: debug_main.py  test_stitcher.py
src/my_stereo_pkg/src/: bindings.cpp  cuda_wrapper.cu  omnidirectional_slam_node.cpp  standalone_estimator.cpp
src/my_stereo_pkg/src/core/: depth_estimation.cpp  isb_filter.cpp  point_cloud_generator.cpp  stitcher.cpp
src/my_stereo_pkg/src/cuda/: cost_kernels.cu  isb_filter.cu  pointcloud_kernels.cu  stitcher.cu
src/quad_cam_system/: README_max_resolution_capture.md  README_scripts.md  package.xml  setup.cfg  setup.py
src/quad_cam_system/launch/: crop_mode.launch.py  full_fov_mode.launch.py  lightweight_mode.launch.py  max_quality_mode.launch.py  max_resolution_capture.launch.py  max_resolution_capture_service.launch.py  mono_multi_cam.launch.py  multi_cam.launch.py  quality_priority_mode.launch.py  recording_mode.launch.py  simple_mode.launch.py  single_4k_test.launch.py  sync_multi_cam.launch.py  test_4k_single.launch.py  ultra_quality_mode.launch.py
src/quad_cam_system/quad_cam_system/: cam_node.py  max_resolution_capture_node.py  max_resolution_capture_service.py  mono_cam_node.py  sync_cam_node.py  usb_camera_capture.py
src/quad_cam_system/scripts/: convert_bag_simple.py  convert_bag_to_mono.py  convert_ros1_bag_to_mono.py  simple_convert_ros1.py
src/quad_cam_system/test/: test_image_capture.py  test_save_functionality.py
