<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_stereo_pkg</name>
  <version>0.0.0</version>
  <description>Stereo vision package with CUDA support and Python bindings</description>
  <maintainer email="tttsukasa0413@gmail.com">motoken</maintainer>
  <license>MIT</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- ROS 2 dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>realsense2_camera</depend>
  <depend>rtabmap_odom</depend>
  <depend>rtabmap_ros</depend>

  <!-- System dependencies (handled by find_package in CMakeLists.txt) -->
  <!-- torch: PyTorch C++ API -->
  <!-- cuda: NVIDIA CUDA toolkit -->
  <!-- eigen3: Linear algebra library -->
  <!-- nlohmann_json: JSON parsing (header-only) -->
  <!-- opencv: Image I/O and processing -->
  
  <!-- Documentation -->
  <doc_depend>doxygen</doc_depend>
  
  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>